website/src/css/custom.css
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

:root {
  /*
  See css var + hsl color palette technique:
  https://blog.maximeheckel.com/posts/the-power-of-composition-with-css-variables/
   */
  --site-primary-hue-saturation: 167 68%;
  --site-primary-hue-saturation-light: 167 56%; /* do we really need this extra one? */
  --site-color-favorite-background: #f6fdfd;
  --site-color-tooltip: #fff;
  --site-color-tooltip-background: #353738;
  --site-color-svg-icon-favorite: #e9669e;
  --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 25%);
  --site-color-feedback-background: #fff;
  --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
}

html[data-theme='dark'] {
  --site-color-feedback-background: #f0f8ff;
  --site-color-favorite-background: #1d1e1e;
  --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 10%);
  --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
}

[data-theme='light'] {
  --ifm-color-primary: hsl(var(--site-primary-hue-saturation) 30%);
  --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation) 26%);
  --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation) 23%);
  --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation) 17%);

  --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light) 39%);
  --ifm-color-primary-lighter: hsl(
    var(--site-primary-hue-saturation-light) 47%
  );
  --ifm-color-primary-lightest: hsl(
    var(--site-primary-hue-saturation-light) 58%
  );
}

[data-theme='dark'] {
  --ifm-color-primary: hsl(var(--site-primary-hue-saturation) 45%);
  --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation) 41%);
  --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation) 38%);
  --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation) 32%);

  --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light) 54%);
  --ifm-color-primary-lighter: hsl(
    var(--site-primary-hue-saturation-light) 62%
  );
  --ifm-color-primary-lightest: hsl(
    var(--site-primary-hue-saturation-light) 73%
  );
}

.header-github-link:hover {
  opacity: 0.6;
}

.header-github-link::before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

[data-theme='dark'] .header-github-link::before {
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

.footer--dark {
  --ifm-footer-background-color: #2b3137;
}

.unique-tabs .tabs__item {
  line-height: 16px;
  margin-right: 8px;
}

.unique-tabs .tabs__item--active {
  border: 0;
  color: #fff;
  border-radius: var(--ifm-global-radius);
  background-color: var(--ifm-tabs-color-active);
}

[data-theme='light'] .themedDocusaurus [fill='#FFFF50'] {
  fill: greenyellow;
}

[data-theme='dark'] .themedDocusaurus [fill='#FFFF50'] {
  fill: seagreen;
}

[data-theme='light'] .DocSearch {
  /* --docsearch-primary-color: var(--ifm-color-primary); */
  /* --docsearch-text-color: var(--ifm-font-color-base); */
  --docsearch-muted-color: var(--ifm-color-emphasis-700);
  --docsearch-container-background: rgb(94 100 112 / 70%);
  /* Modal */
  --docsearch-modal-background: var(--ifm-color-secondary-lighter);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-color-secondary);
  --docsearch-searchbox-focus-background: var(--ifm-color-white);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-white);
  /* Footer */
  --docsearch-footer-background: var(--ifm-color-white);
}

[data-theme='dark'] .DocSearch {
  --docsearch-text-color: var(--ifm-font-color-base);
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgb(47 55 69 / 70%);
  /* Modal */
  --docsearch-modal-background: var(--ifm-background-color);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-background-color);
  --docsearch-searchbox-focus-background: var(--ifm-color-black);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-emphasis-100);
  /* Footer */
  --docsearch-footer-background: var(--ifm-background-surface-color);
  --docsearch-key-gradient: linear-gradient(
    -26.5deg,
    var(--ifm-color-emphasis-200) 0%,
    var(--ifm-color-emphasis-100) 100%
  );
}

div[class^='announcementBar_'] {
  --site-announcement-bar-stripe-color1: hsl(
    var(--site-primary-hue-saturation) 85%
  );
  --site-announcement-bar-stripe-color2: hsl(
    var(--site-primary-hue-saturation) 95%
  );
  background: repeating-linear-gradient(
    35deg,
    var(--site-announcement-bar-stripe-color1),
    var(--site-announcement-bar-stripe-color1) 20px,
    var(--site-announcement-bar-stripe-color2) 10px,
    var(--site-announcement-bar-stripe-color2) 40px
  );
  font-weight: bold;
}

.screen-reader-only {
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: polygon(0 0, 0 0, 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

[data-theme='light'] img[src$='#gh-dark-mode-only'],
[data-theme='dark'] img[src$='#gh-light-mode-only'] {
  display: none;
}

/* Used to test CSS insertion order */
.test-marker-site-custom-css-unique-rule {
  content: 'site-custom-css-unique-rule';
}

@media only screen and (max-width: 996px) {
  .video-container {
    position: relative;
    overflow: hidden;
    width: 100%;
    max-width: 560px;
    margin: 0 auto;
    padding-top: 56.25%;
  }

  .video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

.dropdown-separator {
  margin: 0.3rem 0;
}

.dropdown-archived-versions {
  font-size: 0.875rem;
  padding: 0.2rem 0.5rem;
}

.code-block-error-line {
  background-color: #ff000020;
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
  border-left: 3px solid #ff000080;
}

